--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,7 +82,8 @@ select {
   background-color: #0c7214; }
 
 .bg-complete {
-  background-color: #2e2e2e; }
+  background-color: #2e2e2e;
+  border: 0.1rem solid #b3b3b3; }
 
 .c-initialized {
   color: #eeeeee; }
@@ -338,7 +339,8 @@ select {
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start; }
+    justify-content: flex-start;
+    transition: all 0.2s ease; }
     .picklist .picklist-header .picklist-info {
       position: relative; }
       .picklist .picklist-header .picklist-info .picklist-name {
@@ -375,34 +377,38 @@ select {
           .picklist .picklist-header .picklist-info .status-dot.status-dot-active .picklist-status {
             display: initial;
             transition: all 0.2s ease; }
-  .picklist .picklist-collapse-upper .card-body {
-    padding: 0; }
-    .picklist .picklist-collapse-upper .card-body div {
-      display: flex;
-      justify-content: space-between;
-      background-color: #b3b3b3;
-      padding: 0.5rem 1rem;
-      margin-top: 0.75rem; }
-      .picklist .picklist-collapse-upper .card-body div .btn {
-        min-height: 3rem;
-        min-width: 3rem; }
-        .picklist .picklist-collapse-upper .card-body div .btn i {
-          font-size: 1rem; }
-  .picklist .picklist-collapse-lower {
+    .picklist .picklist-header.picklist-open {
+      transition: all 0.2s ease; }
+      .picklist .picklist-header.picklist-open .picklist-name {
+        max-width: 60%; }
+      .picklist .picklist-header.picklist-open .picklist-subtitle {
+        max-width: 60%; }
+  .picklist .picklist-upper-collapse .card-body {
+    display: flex;
+    justify-content: space-between;
+    background-color: #b3b3b3;
+    padding: 0.5rem 1rem;
+    margin-top: 0.75rem; }
+    .picklist .picklist-upper-collapse .card-body .btn {
+      min-height: 3rem;
+      min-width: 3rem; }
+      .picklist .picklist-upper-collapse .card-body .btn i {
+        font-size: 1rem; }
+  .picklist .picklist-lower-collapse {
     border: none;
     outline: none; }
-    .picklist .picklist-collapse-lower .picklist-body ul {
+    .picklist .picklist-lower-collapse .picklist-lower ul {
       border: none;
       margin-bottom: 0.75rem; }
-      .picklist .picklist-collapse-lower .picklist-body ul li:nth-child(odd) {
+      .picklist .picklist-lower-collapse .picklist-lower ul li:nth-child(odd) {
         background-color: #b3b3b3; }
-      .picklist .picklist-collapse-lower .picklist-body ul li {
+      .picklist .picklist-lower-collapse .picklist-lower ul li {
         display: flex;
         align-items: center;
         padding: 0.75rem 1rem; }
-        .picklist .picklist-collapse-lower .picklist-body ul li i {
+        .picklist .picklist-lower-collapse .picklist-lower ul li i {
           margin-right: 0.25rem; }
-        .picklist .picklist-collapse-lower .picklist-body ul li .picklist-body-qty {
+        .picklist .picklist-lower-collapse .picklist-lower ul li .picklist-body-qty {
           margin-left: auto; }
 
 .picklist-skeleton {
