--- a/client/src/assets/css/App.css
+++ b/client/src/assets/css/App.css
@@ -70,36 +70,55 @@ select {
   background-color: #a10000; }
 
 .bg-initialized {
-  background-color: #eeeeee;
-  color: #4b4b4b; }
+  background-color: #7397af;
+  box-shadow: 0 0 0.5rem #7397af;
+  color: #292929;
+  opacity: 0.8; }
 
 .bg-submitted {
-  background-color: #126c83; }
+  background-color: #067d9b; }
 
 .bg-retrieving {
-  background-color: #d36600; }
+  background-color: #d19945;
+  box-shadow: 0 0 0.25rem #d19945;
+  color: #292929;
+  opacity: 0.8; }
 
 .bg-retrieved {
-  background-color: #0c7214; }
+  background-color: #e06c00; }
+
+.bg-stocking {
+  background-color: #4fc25b;
+  box-shadow: 0 0 0.25rem #4fc25b;
+  color: #292929;
+  opacity: 0.8; }
 
 .bg-complete {
-  background-color: #2e2e2e;
-  border: 0.1rem solid #b3b3b3; }
+  background-color: #00750a; }
 
 .c-initialized {
-  color: #eeeeee; }
+  color: #7397af; }
 
 .c-submitted {
-  color: #126c83; }
+  color: #067d9b; }
 
 .c-retrieving {
-  color: #d36600; }
+  color: #d19945; }
 
 .c-retrieved {
-  color: #0c7214; }
+  color: #e06c00; }
 
 .c-complete {
-  color: #2e2e2e; }
+  color: #00750a; }
+
+.c-requested {
+  color: #e06c00; }
+
+.c-found {
+  color: #06720f; }
+
+.c-not-found {
+  color: #a10000; }
 
 .modal .modal-dialog {
   vertical-align: middle; }
@@ -236,11 +255,11 @@ select {
       #bottom-nav .nav .nav-item.active.home {
         border-bottom: 0.5rem solid #a10000; }
       #bottom-nav .nav .nav-item.active.current {
-        border-bottom: 0.5rem solid #126c83; }
+        border-bottom: 0.5rem solid #067d9b; }
       #bottom-nav .nav .nav-item.active.retrieve {
-        border-bottom: 0.5rem solid #d36600; }
+        border-bottom: 0.5rem solid #e06c00; }
       #bottom-nav .nav .nav-item.active.library {
-        border-bottom: 0.5rem solid #0c7214; }
+        border-bottom: 0.5rem solid #00750a; }
       #bottom-nav .nav .nav-item.active a {
         line-height: 4rem; }
 
@@ -340,25 +359,26 @@ select {
   animation: refresh-ring 10s linear infinite;
   border-color: transparent transparent transparent transparent; }
 
-.filler {
-  width: 0; }
+.refresh-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0.25rem;
+  display: flex;
+  justify-content: flex-start; }
+  .refresh-bar .bar-filler {
+    width: 100%;
+    height: 100%;
+    background-color: #eeeeee;
+    opacity: 0.1;
+    animation: bar-timer 10s linear; }
 
-@keyframes refresh-ring {
+@keyframes bar-timer {
   0% {
-    transform: rotate(0deg);
-    border-color: transparent transparent transparent transparent; }
-  25% {
-    transform: rotate(90deg);
-    border-color: white transparent transparent transparent; }
-  50% {
-    transform: rotate(180deg);
-    border-color: white white transparent transparent; }
-  75% {
-    transform: rotate(270deg);
-    border-color: white white white transparent; }
+    width: 100%; }
   100% {
-    transform: rotate(360deg);
-    border-color: white white white white; } }
+    width: 0%; } }
 .search-bar {
   margin-bottom: 1rem; }
   .search-bar .input-group .form-control,
@@ -510,7 +530,7 @@ select {
     border-radius: 0.25rem;
     opacity: 0.5; }
   .picklist-skeleton .card-body-skeleton .picklist-status-skeleton {
-    background-color: #2e2e2e;
+    background-color: #00750a;
     width: 5rem; }
 
 .current .submit-current-trigger {
@@ -518,23 +538,24 @@ select {
   width: 4rem;
   height: 4rem;
   box-shadow: 0 0 0.75rem 0 #202020;
-  border: 0.2rem solid #0f5a6d;
+  border: 0.2rem solid #056982;
   border-radius: 50%;
   font-size: 1.5rem;
   bottom: 3rem;
   left: 50%;
   transform: translate(-50%, 0);
   z-index: 1031;
-  background-color: #126c83; }
+  background-color: #067d9b; }
 .current .submit-current-collapse {
   position: absolute;
   width: 100%;
   padding: 0 4rem;
-  bottom: 8rem; }
+  bottom: 8rem;
+  left: 0; }
   .current .submit-current-collapse .submit-current-btn {
-    background-color: #126c83;
+    background-color: #067d9b;
     box-shadow: 0 0 0.25rem 0 #202020;
-    border: 0.2rem solid #106378; }
+    border: 0.2rem solid #06738f; }
 .current .current-items-list .current-items-item {
   box-shadow: 0 0 0.5rem #202020; }
   .current .current-items-list .current-items-item.item-open {
@@ -732,3 +753,19 @@ select {
     opacity: 0.25; }
   100% {
     opacity: 0.75; } }
+@keyframes refresh-ring {
+  0% {
+    transform: rotate(0deg);
+    border-color: transparent transparent transparent transparent; }
+  25% {
+    transform: rotate(90deg);
+    border-color: white transparent transparent transparent; }
+  50% {
+    transform: rotate(180deg);
+    border-color: white white transparent transparent; }
+  75% {
+    transform: rotate(270deg);
+    border-color: white white white transparent; }
+  100% {
+    transform: rotate(360deg);
+    border-color: white white white white; } }
