--- a/client/src/assets/css/App.scss
+++ b/client/src/assets/css/App.scss
@@ -115,10 +115,9 @@ select {
 }
 
 .bg-initialized {
-	background-color: $initialized;
-	box-shadow: 0 0 0.5rem $initialized;
+	background-color: lighten($initialized, 35%);
+	border: 0.2rem solid $initialized;
 	color: $color-1;
-	opacity: 0.8;
 }
 
 .bg-submitted {
@@ -126,10 +125,9 @@ select {
 }
 
 .bg-retrieving {
-	background-color: $retrieving;
-	box-shadow: 0 0 0.25rem $retrieving;
+	background-color: lighten($retrieving, 35%);
+	border: 0.2rem solid $retrieving;
 	color: $color-1;
-	opacity: 0.8;
 }
 
 .bg-retrieved {
@@ -137,10 +135,9 @@ select {
 }
 
 .bg-stocking {
-	background-color: $stocking;
-	box-shadow: 0 0 0.25rem $stocking;
+	background-color: lighten($stocking, 35%);
+	border: 0.2rem solid $stocking;
 	color: $color-1;
-	opacity: 0.8;
 }
 
 .bg-complete {
