--- a/client/src/assets/css/App.scss
+++ b/client/src/assets/css/App.scss
@@ -1102,6 +1102,30 @@ select {
 }
 
 // -------------- Media Queries -------------- //
+.about {
+	max-width: 90%;
+
+	a {
+		background-color: $color-4;
+		border-radius: 0.25rem;
+		padding: 0.25rem 0.5rem;
+		color: $color-3;
+		margin-left: 0.25rem;
+
+		&:active {
+			background-color: darken($color-4, 5%);
+		}
+	}
+
+	.attributions {
+		margin-top: 1.5rem;
+		margin-bottom: 1.5rem;
+		font-size: 2rem;
+		font-weight: 100;
+	}
+}
+
+// -------------- Media Queries -------------- //
 @media (max-width: 768px) {
 	.container {
 		padding: 0;
