--- a/client/src/assets/css/components/pages/_Library.scss
+++ b/client/src/assets/css/components/pages/_Library.scss
@@ -23,6 +23,9 @@
 	}
 
 	.library-item-header {
+		position: relative;
+		cursor: pointer;
+
 		.library-item-info {
 			.library-item-name {
 				font-weight: 400;
@@ -31,6 +34,15 @@
 					margin-right: 0.5rem;
 				}
 			}
+		}
+
+		.library-item-color {
+			position: absolute;
+			top: -1%;
+			left: -0.2%;
+			width: 1rem;
+			height: 102%;
+			opacity: 0.5;
 		}
 	}
 	.library-item-collapse-upper {
@@ -97,5 +109,18 @@
 		.new-library-item-upc {
 			display: flex;
 		}
+	}
+}
+
+@media (min-width: $bp-md) {
+	.library .library-item-header .library-item-color {
+		border-top-left-radius: 0.25rem;
+		border-bottom-left-radius: 0.25rem;
+	}
+}
+
+@media (min-width: $bp-lg) {
+	.library .library-item-header .library-item-color {
+		left: -0.1%;
 	}
 }
