--- a/client/src/assets/css/components/layout/_TopNav.scss
+++ b/client/src/assets/css/components/layout/_TopNav.scss
@@ -16,21 +16,24 @@
 		position: absolute;
 		z-index: 1;
 		right: 0;
-		width: 0;
-		height: calc(100vh - 8rem);
+		height: calc(100vh - 3.5rem);
 		background-color: darken($dark, 10%);
-		display: none;
+		transform: translateX(100%);
+		transition: transform 0.2s ease;
 
 		&.show {
-			right: 0;
-			width: initial;
-			height: calc(100vh - 8rem);
 			display: initial;
+			transform: translateX(0%);
+		}
+
+		&.collapsing {
+			transform: translateX(100%);
+			transition: transform 0.3s ease;
 		}
 	}
 
 	.navbar-nav {
-		height: 100%;
+		height: calc(100% - 4.5rem);
 
 		.nav-item {
 			margin: 0;
@@ -57,10 +60,6 @@
 					min-height: 2.2rem;
 				}
 			}
-		}
-
-		.top-nav-settings {
-			margin-top: auto;
 		}
 	}
 }
